# ai-cad-eda-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
adapters/: __init__.py  base.py
adapters/fusion360/: __init__.py  adapter.py  bridge_server.py  health_monitor.py  script_generator.py  tool_registry.json
adapters/inventor/: __init__.py  adapter.py
config/: loader.py  pass_fail_criteria.yaml  tools.yaml  units.yaml
data/results/: board.drc.json  board.kicad_pcb  design.step  design.stl  pattern_test.msh  pattern_test.step  scenario_pcb.drc.json  simple_box.step  test_board.drc.json  test_board.kicad_pcb  test_box.step  test_box.stl  thermal_e2e_result.json  thermal_test.step
docs/: TEST_AND_FIX.md
env/: .env.example
env/requirements/: all.txt  base.txt  dev.txt  fusion360.txt  kicad.txt  orchestrator.txt  simulation.txt
env/scripts/: check_tools.py  recreate_venv.ps1  setup.sh  start_services.sh  sync_addin.py
orchestrator/: __init__.py  claude_client.py  core.py  gemini_client.py  llm_client.py  plan_parser.py  planner.py  question_templates.py  result_analyzer.py  system_prompt.py
pipeline/: __init__.py  dependency_graph.py  design_spec.py  error_budget.py  runner.py  snapshot.py  state.py
tests/: test_env.py  test_fusion_bridge_manual.py  test_scenarios.py
tests/test_adapters/: test_chat_palette.py  test_fusion360.py
tests/test_orchestrator/: test_hole_coordinate.py  test_llm_client.py  test_llm_swappability.py  test_retry_loop.py
validation/: __init__.py  criteria_loader.py  gate.py  geometry.py  mesh_quality.py  unit_converter.py
(+64 files in other folders)
