[project]
name = "cad-eda-ai-system"
version = "0.1.0"
description = "AI 기반 CAD/EDA 통합 설계 자동화 시스템"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies.claude]
anthropic = ["anthropic>=0.40.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]
bridge = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
simulation = [
    "gmsh>=4.12",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
